--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+    implementation "androidx.activity:activity-ktx:1.4.0"
+
+
+
 
 }
